fixing scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,17 @@ body,
   background-color: #4c8ac8;
   font-family: 'Rajdhani', sans-serif;
   color: #ffffff;
+  scroll-behavior: smooth !important;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  touch-action: auto;
+  -ms-touch-action: auto;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 * {
